packages/test/test-server6/kubernetes/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: mashroom-portal
    namespace: portal
    annotations:
        ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        -   http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: mashroom-portal
                                port:
                                    number: 5050
